correction collapse créa carroussel

--- a/src/styles/collapse.scss
+++ b/src/styles/collapse.scss
@@ -30,13 +30,15 @@
         overflow: hidden;
     }
     &__textOpen{
-        height: auto;
+        min-height: 95px;
         width: 100%;
         border-radius: 0 0 4px 4px;
-        padding: 20px 0 10px 15px;
+        padding: 20px 0 20px 10px;
         background-color: #F7F7F7;
         color: #FF6060;
         font-size: 18px;
+        list-style: none;
+        
     }
 }
 
